chore: 代理设置、删除依赖